# char-recognition

./: CMakeLists.txt  README.md
src/: UI.cpp  UI.h  color.cpp  color.h  download.cpp  download.h  indicators.h  load.cpp  load.h  main.cpp  train.cpp  train.h
